# usd-quest

./: .gitignore  LICENSE  README.md  pyproject.toml
src/pixelforge/: app.py
src/pixelforge/packaging/: usd_bootstrap.py
src/pixelforge/viewport/: stage_view.py
src/usdquest/: app.py
src/usdquest/authoring/: layer_stack_panel.py  mission_panel.py  prim_tree_panel.py  usda_editor.py
src/usdquest/lessons/: grader.py  mission.py
src/usdquest/lessons/content/act01_first_day/m01_hello_stage/: mission.yaml  starter.usda
src/usdquest/packaging/: usd_bootstrap.py
src/usdquest/progress/: save.py
src/usdquest/viewport/: stage_view.py
tests/: test_grader.py
